syntax = "proto3";

package sfc_scheme;

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Scheme.Data.GetAll";

message GetAllSchemeDataRequest{}