syntax = "proto3";

package sfc_scheme;

import "Models/Scheme/Data/data_value.proto";
import "Models/Scheme/Data/formation_position_data_value.proto";
import "Models/Scheme/Data/formation_data_value.proto";

option csharp_namespace = "SFC.Scheme.Contracts.Messages.Scheme.Data.GetAll";

message GetAllSchemeDataResponse
{
    repeated FormationDataValue formations = 1;
    repeated FormationPositionDataValue formation_positions = 2;    
    repeated DataValue scheme_types = 3;    
}