syntax = "proto3";

package sfc_scheme;

import "Messages/Scheme/Data/GetAll/get_all_scheme_data_request.proto";
import "Messages/Scheme/Data/GetAll/get_all_scheme_data_response.proto";

option csharp_namespace = "SFC.Scheme.Contracts.Services";

service SchemeDataService {
    rpc GetAll (GetAllSchemeDataRequest) returns (GetAllSchemeDataResponse);
}